--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,11 @@
 <resources>
     <color name="primary_color">#9ebc9e</color>
     <color name="primary_color_dark">#6f8c70</color>
-    <color name="accent_color">#ffcfd2</color>
+    <color name="primary_color_light">#6f8c70</color>
+   <color name="black">#cfefcf</color>
+
+    <color name="secondary">#ffcfd2</color>
+    <color name="secondary_dark">#cb9ea1</color>
 
 
 </resources>
