--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Layout  -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".activities.EditorActivity"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="16dp"
+    android:clipToPadding="false"
+    >
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="10dp"
-    android:layout_margin="2dp"
-    tools:context=".activities.EditorActivity">
+    android:layout_margin="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -206,35 +213,40 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/pet_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:src="@drawable/img_dog"
             app:civ_border_color="@color/primary_color"
-            app:civ_border_width="5dp" />
+            app:civ_border_width="5dp"
+            app:civ_circle_background_color="@color/secondary"
+           />
 
 
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="16dp">
-
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:layout_gravity="bottom|center_horizontal"
-            android:id="@+id/pick_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClickPickImage"
-            android:text="@string/pick_image"
-            android:textColor="@color/white"
-            app:icon="@drawable/ic_photo"
-            app:iconTint="@color/white"
-            android:backgroundTint="@color/secondary_dark"
-            />
     </RelativeLayout>
 
 </LinearLayout>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/pick_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/secondary_dark"
+        android:onClick="onClickPickImage"
+        android:src="@drawable/ic_photo"
+        android:padding="16dp"
+        app:rippleColor="@color/white"
+        app:tint="@null"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        />
+
+
+
+</RelativeLayout>
+
+
+
+
 
