--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="150dp"
     android:orientation="vertical"
     android:padding="16dp"
+    android:background="@drawable/item_background"
     android:layout_margin="8dp"
     android:clickable="true"
     android:focusable="true">
@@ -14,24 +15,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image"
             android:layout_width="110dp"
             android:layout_height="110dp"
+            app:civ_border_color="@color/primary_color"
+            app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/item_bg"
             android:scaleType="centerCrop"
-            android:background="@drawable/item_bg" />
+            android:background="@drawable/item_bg"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.45" />
+            app:layout_constraintGuide_begin="163dp" />
 
         <TextView
             android:id="@+id/name"
@@ -72,6 +75,7 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="19dp"
+            android:src="@drawable/ic_weight"
             android:layout_height="19dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
