--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,231 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Layout  -->
-<RelativeLayout
+<ScrollView
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activities.EditorActivity"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:clipToPadding="false"
-    >
-<LinearLayout
+    android:fillViewport="true">
+
+<RelativeLayout
+
+    android:id="@+id/mRelativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:layout_margin="2dp">
+    android:padding="16dp"
+    android:clipToPadding="false">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <TextView
-            android:text="@string/category_info"
-            style="@style/CategoryStyle"
-            />
-
-        <!-- Input -->
         <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:layout_margin="2dp">
 
-            <!-- Name -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:inputType="textCapWords"
-                android:layout_width="match_parent"
-                app:endIconMode="clear_text"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_pet_name"
-                app:boxStrokeColor="@color/secondary_dark"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_pet_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Breed -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:inputType="textCapWords"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_pet_breed"
-                app:endIconMode="clear_text"
-                app:boxStrokeColor="@color/secondary_dark"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:padding="16dp">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_pet_breed"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/pet_image"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/img_dog"
+                    app:civ_border_color="@color/primary_color"
+                    app:civ_border_width="2dp"
+                    />
+            </RelativeLayout>
 
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:text="@string/category_info"
+                    style="@style/CategoryStyle"
                     />
 
-            </com.google.android.material.textfield.TextInputLayout>
+                <!-- Input -->
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:orientation="vertical">
+
+                    <!-- Name -->
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:inputType="textCapWords"
+                        android:layout_width="match_parent"
+                        app:endIconMode="clear_text"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_pet_name"
+                        app:boxStrokeColor="@color/secondary_dark"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_pet_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <!-- Breed -->
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:inputType="textCapWords"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_pet_breed"
+                        app:endIconMode="clear_text"
+                        app:boxStrokeColor="@color/secondary_dark"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_pet_breed"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- Gender -->
+            <LinearLayout
+                android:id="@+id/container_gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:text="@string/category_gender"
+                    style="@style/CategoryStyle"
+                    />
+
+                <!-- Input -->
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
+
+                    <!-- Gender spinner -->
+                    <Spinner
+                        android:id="@+id/spinner_gender"
+                        android:layout_height="48dp"
+                        android:layout_width="wrap_content"
+                        android:paddingEnd="16dp"
+                        android:paddingStart="16dp"
+                        android:spinnerMode="dropdown"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:text="@string/category_data"
+                    style="@style/CategoryStyle"
+                    />
+
+                <!-- Input -->
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:paddingEnd="4dp"
+                    android:paddingStart="4dp"
+                    android:orientation="vertical">
+
+                    <!-- BD -->
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/pet_birthdate"
+                        android:inputType="date"
+                        android:layout_width="match_parent"
+                        app:endIconMode="clear_text"
+                        android:clickable="true"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_pet_birthdate"
+                        app:boxStrokeColor="@color/secondary_dark"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_pet_birthdate"
+                            android:focusableInTouchMode="false"
+                            android:clickable="true"
+                            android:editable="false"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <!-- Weight -->
+                    <com.google.android.material.textfield.TextInputLayout
+                        app:suffixText="kg"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_pet_weight"
+                        app:endIconMode="clear_text"
+                        app:boxStrokeColor="@color/secondary_dark"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_pet_weight"
+                            android:inputType="number|textNoSuggestions"
+                            android:digits="0123456789"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/container_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:baselineAligned="false">
+
+                <!-- Input -->
+                <RelativeLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:hint="@string/hint_pet_details"
+                        app:endIconMode="clear_text"
+                        android:scrollbars="vertical"
+                        app:boxStrokeColor="@color/secondary_dark"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_pet_details"
+                            android:inputType="textLongMessage|textCapSentences"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+                </RelativeLayout>
+            </LinearLayout>
+
+
 
         </LinearLayout>
-    </LinearLayout>
-
-    <!-- Gender -->
-    <LinearLayout
-        android:id="@+id/container_gender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="@string/category_gender"
-            style="@style/CategoryStyle"
-            />
-
-        <!-- Input -->
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:orientation="vertical">
-
-            <!-- Gender spinner -->
-            <Spinner
-                android:id="@+id/spinner_gender"
-                android:layout_height="48dp"
-                android:layout_width="wrap_content"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:spinnerMode="dropdown"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="@string/category_data"
-            style="@style/CategoryStyle"
-            />
-
-        <!-- Input -->
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:paddingEnd="4dp"
-            android:paddingStart="4dp"
-            android:orientation="vertical">
-
-            <!-- BD -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/pet_birthdate"
-                android:inputType="date"
-                android:layout_width="match_parent"
-                app:endIconMode="clear_text"
-                android:clickable="true"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_pet_birthdate"
-                app:boxStrokeColor="@color/secondary_dark"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_pet_birthdate"
-                    android:focusableInTouchMode="false"
-                    android:clickable="true"
-                    android:editable="false"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Weight -->
-            <com.google.android.material.textfield.TextInputLayout
-                app:suffixText="kg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_pet_weight"
-                app:endIconMode="clear_text"
-                app:boxStrokeColor="@color/secondary_dark"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_pet_weight"
-                    android:inputType="number|textNoSuggestions"
-                    android:digits="0123456789"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/container_details"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
-
-        <!-- Input -->
-        <RelativeLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:hint="@string/hint_pet_details"
-                app:endIconMode="clear_text"
-                android:scrollbars="vertical"
-                app:boxStrokeColor="@color/secondary_dark"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_pet_details"
-                    android:inputType="textLongMessage|textCapSentences"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-        </RelativeLayout>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="16dp">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/pet_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/img_dog"
-            app:civ_border_color="@color/primary_color"
-            app:civ_border_width="2dp"
-           />
-
-
-
-    </RelativeLayout>
-
-</LinearLayout>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -241,11 +246,5 @@
         android:layout_alignParentBottom="true"
         />
 
-
-
 </RelativeLayout>
-
-
-
-
-
+</ScrollView>
