--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-<item android:drawable="@color/primary_color_dark"/>
+<item android:drawable="@color/primary_color_dark"
+    />
     <item>
         <bitmap
             android:src="@drawable/logopink_144dp"
